--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@shadcn/ui": "^0.0.4",
     "@studio-freight/react-lenis": "^0.0.47",
     "@vitejs/plugin-react": "^4.3.3",
+    "axios": "^1.7.9",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.11",
@@ -26,9 +27,13 @@
     "lucide-react": "^0.454.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.2",
     "react-icons": "^5.3.0",
+    "react-query": "^3.39.3",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
+    "react-select": "^5.9.0",
+    "react-toastify": "^11.0.2",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
   },
